--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -13,14 +13,14 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('system.index') }}">Home</a></li>
                     {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('account') }}">Account</a></li>
+                        <li><a href="{{ url_for('users.account') }}">Account</a></li>
                         <li>Hello: {{ current_user.username }}</a></li>
-                        <li><a cless="logout-btn" href="{{ url_for('logout') }}">Logout</a></li>
+                        <li><a cless="logout-btn" href="{{ url_for('users.logout') }}">Logout</a></li>
                     {% else %}
-                        <li><a class="login-btn" href="{{ url_for('login') }}">Login</a></li>
-                        <li><a class="register-btn" href="{{ url_for('register') }}">Register</a></li>
+                        <li><a class="login-btn" href="{{ url_for('users.login') }}">Login</a></li>
+                        <li><a class="register-btn" href="{{ url_for('users.register') }}">Register</a></li>
                     {% endif %}
                 </ul>
                 
