--- a/main/templates/user/login.html
+++ b/main/templates/user/login.html
@@ -1,4 +1,4 @@
-<{% extends "layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
     <div class="centre">
         <h1>Login</h1>
@@ -59,7 +59,7 @@
     </div>
 
     <div>
-        Need an account? <a href="{{ url_for('register') }}">Register Now!</a>
+        Need an account? <a href="{{ url_for('users.register') }}">Register Now!</a>
     </div>
 
 {% endblock content %}
