--- a/main/templates/user/register.html
+++ b/main/templates/user/register.html
@@ -123,7 +123,7 @@
     <br>
 
     <div>
-        Already have an account? <a href="{{ url_for('login') }}">Login</a>
+        Already have an account? <a href="{{ url_for('users.login') }}">Login</a>
     </div>
 
 {% endblock content %}
