changred page title

--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Template v1.0
-            {% if title  != null %}
+        <title>Student Focus
+            {% if title != null %}
                 - {{ title }}
             {% endif %}
         </title>
