--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="{{ url_for('system.index') }}">Home</a></li>
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
                     {% if current_user.is_authenticated %}
                         <li><a href="{{ url_for('users.account') }}">Account</a></li>
                         <li>Hello: {{ current_user.username }}</a></li>
