--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -8,19 +8,27 @@
             {% endif %}
         </title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"/>
+
+        <!-- using bootstrap 5.2.3 for quick styling-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+        <!-- to get the font-awesome cdn link: https://cdnjs.com/libraries/font-awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+        <!-- for the icon codes: https://fontawesome.com/icons -->
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
                     {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('users.account') }}">Account</a></li>
-                        <li>Hello: {{ current_user.username }}</a></li>
-                        <li><a cless="logout-btn" href="{{ url_for('users.logout') }}">Logout</a></li>
+                    <li><a href="{{ url_for('students.student_home') }}">Home</a></li>
+                    <li><a href="{{ url_for('users.account') }}">Account</a></li>
+                    <li>Hello: {{ current_user.username }}</a></li>
+                    <li><a cless="logout-btn" href="{{ url_for('users.logout') }}">Logout</a></li>
                     {% else %}
-                        <li><a class="login-btn" href="{{ url_for('users.login') }}">Login</a></li>
-                        <li><a class="register-btn" href="{{ url_for('users.register') }}">Register</a></li>
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a class="login-btn" href="{{ url_for('users.login') }}">Login</a></li>
+                    <li><a class="register-btn" href="{{ url_for('users.register') }}">Register</a></li>
                     {% endif %}
                 </ul>
                 
@@ -43,7 +51,7 @@
                 <br>
                 {% block content %}
 
-                {% endblock %}
+                {% endblock content %}
             <br>
             </div>
         </div>
