--- a/main/templates/user/account.html
+++ b/main/templates/user/account.html
@@ -8,44 +8,54 @@
         <h2>Hello There Friend</h2>
     {% endif %}
     
-
+    <br>
+    <br>
     <div>
         <h3>Update account details</h3>
+
+        <strong>Email:</strong> {{ current_user.email }}
+
+        <br>
+        <br>
+        
         <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
-
-            <div>
-                {{ form.firstname.label() }}
-                
-                <br>
-                
-                {{ form.firstname() }}
-
-                {% if form.firstname.errors %}
+            <div class="row g-2">
+                <div class="col-md">
                     <div>
-                        {% for error in form.firstname.errors %}
-                        <span style="color: red;">{{ error }}</span>
-                        {% endfor %}
+                        {{ form.firstname.label() }}
+                        
+                        <br>
+                        
+                        {{ form.firstname() }}
+
+                        {% if form.firstname.errors %}
+                            <div>
+                                {% for error in form.firstname.errors %}
+                                <span style="color: red;">{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
                     </div>
-                {% endif %}
-            </div>
-            <br>
+                </div>
 
-
-            <div>
-                {{ form.lastname.label() }}
-
-                <br>
-
-                {{ form.lastname()}}
-
-                {% if form.lastname.errors %}
+                <div class="col-md">
                     <div>
-                        {% for error in form.lastname.errors %}
-                        <span style="color: red;">{{ error }}</span>
-                        {% endfor %}
+                        {{ form.lastname.label() }}
+
+                        <br>
+
+                        {{ form.lastname()}}
+
+                        {% if form.lastname.errors %}
+                            <div>
+                                {% for error in form.lastname.errors %}
+                                <span style="color: red;">{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
                     </div>
-                {% endif %}
+                </div>
             </div>
 
             <br>
