--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -1,52 +1,5 @@
-{% extends "layout.html" %}
-{% block content %}
-
-<a href="{{ url_for('modules.module_list') }}"> <i class="fa-solid fa-arrow-left"></i> all modules</a>
-
-<br>
-<br>
-
-<div class="container text-center">
-    <div class="row">
-        <div class="col-8">
-            <h2>{{ module.code }} - {{ module.name }}</h2>
-        </div>
-        {% set rating = 3 %}
-        <div class="col-4">
-            {% set solid_star = "<i class='fa-solid fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
-            {% set open_star = "<i class='fa-regular fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
-            
-            <a href="{{ url_for('modules.module_review_list', module_id=module.id) }}" class="btn btn-secondary">
-                <!-- <h4>Rating: <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></h4> -->
-                <span style="font-size: 20px">Rating</span></a> 
-                
-                {% set int_rating = module.avg_rating %}
-                {% for i in range(module.avg_rating | int) %}
-                {{ solid_star | safe }}
-                {% endfor %}
-
-                {% for i in range(5 - (module.avg_rating | int)) %}
-                {{ open_star | safe }}
-                {% endfor %}
-                
-                {#
-                <br>
-                {% set int_rating = rating %}
-                {% for i in range(rating | int) %}
-                {{ solid_star | safe }}
-                {% endfor %}
-
-                {% for i in range(5 - (rating | int)) %}
-                {{ open_star | safe }}
-                {% endfor %}
-                #}
-        </div>
-    </div>
-</div>
-
-
-
-<hr>
+{% extends "module/module_layout.html" %}
+{% block module %}
 
 <h3>Lecture Today</h3>
 <br>
@@ -64,6 +17,9 @@
 
 <h3>Module Chat</h3>
 The live chat for this module
+<br>
+<br>
+<a href="#" class="btn btn-secondary">Join the discussion!</a>
 
 <hr>
 
@@ -74,5 +30,44 @@ This is for resources such as:
     <li>docs (words, pdf, etc)</li>
     <li>videos (lectures, youtube, etc)</li>
 </ul>
+<a href="#" class="btn btn-secondary">Add a resource</a>
 
-{% endblock content %}
+
+
+
+
+
+<hr>
+
+<h3>Resources</h3>
+This is for resources such as:
+<ul>
+    <li>images</li>
+    <li>docs (words, pdf, etc)</li>
+    <li>videos (lectures, youtube, etc)</li>
+</ul>
+<a href="#" class="btn btn-secondary">Add a resource</a>
+
+<hr>
+
+<h3>Resources</h3>
+This is for resources such as:
+<ul>
+    <li>images</li>
+    <li>docs (words, pdf, etc)</li>
+    <li>videos (lectures, youtube, etc)</li>
+</ul>
+<a href="#" class="btn btn-secondary">Add a resource</a>
+
+<hr>
+
+<h3>Resources</h3>
+This is for resources such as:
+<ul>
+    <li>images</li>
+    <li>docs (words, pdf, etc)</li>
+    <li>videos (lectures, youtube, etc)</li>
+</ul>
+<a href="#" class="btn btn-secondary">Add a resource</a>
+
+{% endblock module %}
