--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -9,51 +9,44 @@
         </title>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"/>
 
-        <!-- using bootstrap 5.2.3 for quick styling-->
+        <!-- using Bootstrap 5.2.3 for quick styling-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
         <!-- to get the font-awesome cdn link: https://cdnjs.com/libraries/font-awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <!-- for the icon codes: https://fontawesome.com/icons -->
     </head>
+
     <body>
-        <header>
-            <nav>
-                <ul>
-                    {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('students.student_home') }}">Home</a></li>
-                    <li><a href="{{ url_for('users.account') }}">Account</a></li>
-                    <li>Hello: {{ current_user.username }}</a></li>
-                    <li><a cless="logout-btn" href="{{ url_for('users.logout') }}">Logout</a></li>
-                    {% else %}
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a class="login-btn" href="{{ url_for('users.login') }}">Login</a></li>
-                    <li><a class="register-btn" href="{{ url_for('users.register') }}">Register</a></li>
-                    {% endif %}
-                </ul>
-                
-            </nav>
-        </header>
+        {% include 'includes/header.html' %}
+
         <div id="container">
             <div>
                 {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            <br>
-                            <div class=flashes>
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
+                {% if messages %}
+                {% for message in messages %}
+                <br>
+                
+                <div class=flashes>
+                    {{ message }}
+                </div>
+                {% endfor %}
+                {% endif %}
                 {% endwith %}
             </div>
+
             <div id="content">
                 <br>
                 {% block content %}
 
                 {% endblock content %}
-            <br>
+                <br>
             </div>
         </div>
+
+        {% include 'includes/footer.html' %}
+        <!-- Bootstrap 5.2.3 Javascript -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     </body>
 </html>
