--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -18,33 +18,25 @@
     </head>
 
     <body>
-        {% include 'includes/header.html' %}
+        {% include 'includes/header/header.html' %}
 
-        <div id="container">
-            <div>
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                {% for message in messages %}
-                <br>
-                
-                <div class=flashes>
-                    {{ message }}
-                </div>
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
+        <div class="d-flex">
+            <div class="d-none d-lg-block">
+                {% include 'includes/aside.html' %}
+
             </div>
+            
+            <div class="container">
+                {% include 'includes/flash_msg.html' %}
 
-            <div id="content">
-                <br>
                 {% block content %}
 
                 {% endblock content %}
-                <br>
             </div>
         </div>
 
         {% include 'includes/footer.html' %}
+
         <!-- Bootstrap 5.2.3 Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
