--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -1,12 +1,30 @@
-<li class="nav-item">
+<li class="nav-item pe-4">
     <a class="nav-link" href="{{ url_for('students.student_home') }}">
         Home
     </a>
 </li>
 
 <!-- Change this later to current modules -->
-<li class="nav-item">
+<li class="nav-item pe-4">
     <a class="nav-link" href="{{ url_for('modules.module_list') }}">
         All modules
+    </a>
+</li>
+
+<li class="nav-item pe-4">
+    <a class="nav-link" href="#">
+        Notes
+    </a>
+</li>
+
+<li class="nav-item pe-4">
+    <a class="nav-link" href="#">
+        Posts
+    </a>
+</li>
+
+<li class="nav-item pe-4">
+    <a class="nav-link" href="#">
+        Messages
     </a>
 </li>
