--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -26,16 +26,19 @@
 
             </div>
             
-            <div class="container">
-                {% include 'includes/flash_msg.html' %}
-
+            {% include 'includes/flash_msg.html' %}
+            
+            <div class="scrollarea" style="max-height: 93vh; width: 100%">
+                <div class="container">
                 {% block content %}
 
                 {% endblock content %}
+                
+                </div>
+            {% include 'includes/footer.html' %}                
             </div>
         </div>
 
-        {% include 'includes/footer.html' %}
 
         <!-- Bootstrap 5.2.3 Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
