--- a/main/templates/module/module_layout.html
+++ b/main/templates/module/module_layout.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<div class="container">
+<!-- <div class="container"> -->
     <div class="row text-center">
         <div class="col-8">
             <h2>{{ module.code }} - {{ module.name }}</h2>
@@ -41,7 +41,7 @@
     <hr>
 
     {% block module %}
-
+    
     {% endblock module %}
-</div>
+<!-- </div> -->
 {% endblock content %}
