header and nav stuff

--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -1,30 +1,30 @@
 <li class="nav-item pe-4">
     <a class="nav-link" href="{{ url_for('students.student_home') }}">
-        Home
+        <i class="fa-solid fa-house"></i> Home
     </a>
 </li>
 
 <!-- Change this later to current modules -->
 <li class="nav-item pe-4">
     <a class="nav-link" href="{{ url_for('modules.module_list') }}">
-        All modules
+        <i class="fa-solid fa-clipboard"></i> All modules
     </a>
 </li>
 
 <li class="nav-item pe-4">
     <a class="nav-link" href="#">
-        Notes
+        <i class="fa-solid fa-note-sticky"></i> Notes
     </a>
 </li>
 
 <li class="nav-item pe-4">
     <a class="nav-link" href="#">
-        Posts
+        <i class="fa-solid fa-question"></i> Posts
     </a>
 </li>
 
 <li class="nav-item pe-4">
     <a class="nav-link" href="#">
-        Messages
+        <i class="fa-regular fa-comments"></i> Messages
     </a>
 </li>
