--- a/main/templates/includes/header/user_dropdown.html
+++ b/main/templates/includes/header/user_dropdown.html
@@ -5,7 +5,12 @@
     <ul class="dropdown-menu">
         <li>
             <a class="dropdown-item" href="{{ url_for('users.account') }}">
-                Account
+                <i class="fa-solid fa-user-large"></i>  Account
+            </a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="#">
+                <i class="fa-solid fa-plus"></i>  Add a note
             </a>
         </li>
         <li>
