--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -12,7 +12,7 @@
 </li>
 
 <li class="nav-item pe-4">
-    <a class="nav-link" href="#">
+    <a class="nav-link" href="{{ url_for('students.student_note') }}">
         <i class="fa-solid fa-note-sticky"></i> Notes
     </a>
 </li>
@@ -24,7 +24,7 @@
 </li>
 
 <li class="nav-item pe-4">
-    <a class="nav-link" href="#">
+    <a class="nav-link" href="{{ url_for('students.student_message') }}">
         <i class="fa-regular fa-comments"></i> Messages
     </a>
 </li>
