--- a/main/templates/student/student_home.html
+++ b/main/templates/student/student_home.html
@@ -1,7 +1,51 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>This is the student home page</h1>
+<h1>This is your Student Home Page</h1>
+
+<hr>
+<br>
+
+
+<h3>Lectures today</h3>
+There are no lectures today, few
+
+<br>
+<br>
+
+<h6>Think this is wrong?</h6>
+<a href="" class="btn btn-secondary">Add a Lecture</a>
+
+<br>
+<br>
+
+<hr>
+
+<br>
+
+<h3>Recent Recources</h3>
+No resources have been added yet
+
+<br>
+<br>
+
+<h6>Why not add something</h6>
+<a href="" class="btn btn-secondary">Add a Resource</a>
+
+<br>
+<br>
+
+<hr>
+
+<br>
+
+<h3>My Notes</h3>
+There are no notes here yet
+
+<br>
+<br>
+
+<a href="" class="btn btn-secondary">Make a Note</a>
 
 
 {% endblock content %}
