--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -1,30 +1,60 @@
+<!-- Student Home -->
 <li class="nav-item pe-4">
-    <a class="nav-link" href="{{ url_for('students.student_home') }}">
+    <a class="nav-link nav-link d-block d-lg-none d-xl-block" href="{{ url_for('students.student_home') }}">
         <i class="fa-solid fa-house"></i> Home
+    </a>
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Home" href="{{ url_for('students.student_home') }}">
+        <i class="fa-solid fa-house"></i>
     </a>
 </li>
 
 <!-- Change this later to current modules -->
+<!-- Modules -->
 <li class="nav-item pe-4">
-    <a class="nav-link" href="{{ url_for('modules.module_list') }}">
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('modules.module_list') }}">
         <i class="fa-solid fa-clipboard"></i> All modules
     </a>
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="All modules" href="{{ url_for('modules.module_list') }}">
+        <i class="fa-solid fa-clipboard"></i>
+    </a>
 </li>
 
+<!-- Notes -->
 <li class="nav-item pe-4">
-    <a class="nav-link" href="{{ url_for('students.student_note') }}">
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('students.student_note') }}">
         <i class="fa-solid fa-note-sticky"></i> Notes
     </a>
-</li>
-
-<li class="nav-item pe-4">
-    <a class="nav-link" href="#">
-        <i class="fa-solid fa-question"></i> Posts
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Notes" href="{{ url_for('students.student_note') }}">
+        <i class="fa-solid fa-note-sticky"></i>
     </a>
 </li>
 
+<!-- Posts -->
 <li class="nav-item pe-4">
-    <a class="nav-link" href="{{ url_for('students.student_message') }}">
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('socials.social_post') }}">
+        <i class="fa-solid fa-plus"></i> <span class="d-inline d-lg-none d-xl-inline">Posts</span>
+    </a>
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Posts" href="{{ url_for('socials.social_post') }}">
+        <i class="fa-solid fa-plus"></i>
+    </a>
+</li>
+
+<!-- Module Questions -->
+<li class="nav-item pe-4">
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('modules.module_question') }}">
+        <i class="fa-solid fa-question"></i> <span class="d-inline d-lg-none d-xl-inline">Questions</span>
+    </a>
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Questions" href="{{ url_for('modules.module_question') }}">
+        <i class="fa-solid fa-question"></i>
+    </a>
+</li>
+
+<!-- Messages -->
+<li class="nav-item pe-4">
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('socials.social_message') }}">
         <i class="fa-regular fa-comments"></i> Messages
+    </a>
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Messages" href="{{ url_for('socials.social_message') }}">
+        <i class="fa-regular fa-comments"></i>
     </a>
 </li>
