--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -3,6 +3,7 @@
     <a class="nav-link nav-link d-block d-lg-none d-xl-block" href="{{ url_for('students.student_home') }}">
         <i class="fa-solid fa-house"></i> Home
     </a>
+    {# reference: https://getbootstrap.com/docs/4.0/components/tooltips/ #}
     <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Home" href="{{ url_for('students.student_home') }}">
         <i class="fa-solid fa-house"></i>
     </a>
