--- a/main/templates/includes/footer.html
+++ b/main/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-light">
     <div class="container py-5">
-        © Alex Deverson, 2023
+        Student Focus © Alex Deverson, 2023
     </div>
 </div>
