--- a/main/templates/includes/header/user_dropdown.html
+++ b/main/templates/includes/header/user_dropdown.html
@@ -10,7 +10,7 @@
         </li>
         <li>
             <a class="dropdown-item" href="#">
-                <i class="fa-solid fa-note-sticky"></i>  Add a note
+                <i class="fa-solid fa-note-sticky"></i>  Add a Note
             </a>
         </li>
         <li>
