--- a/main/templates/social/social_message.html
+++ b/main/templates/social/social_message.html
@@ -1,6 +1,29 @@
 {% extends "social/social_layout.html" %}
 {% block social %}
 
+{% from "helpers/cards.html" import card %}
+
 <h1>Social messages</h1>
+<br>
+<div class="row">
+    <div class="col-3 scrollarea" style="max-height: 70vh;">
+        {% for i in range(10) %}
+        {% set num = i + 1 %}
+        {% set temp = 'Message from Friend ' + num | string %}
+        {{ card(title = temp, link = '#', link_text = 'View Message', width = 98) }}
+        {% endfor %} 
+    </div>
+    <div class="col">
+        <h3>Friend 3</h3>
+        <div class="scrollarea" style="max-height: 66vh;">
+            {% for i in range(10) %}
+            {% set num = i + 1 %}
+            {{ card(title = 'Username', description = 'This is the description', width = 98) }}
+            {% endfor %} 
+        </div>
+    </div>
+</div>
+
+<br>
     
 {% endblock social %}
