--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -12,10 +12,10 @@
 <!-- Change this later to current modules -->
 <!-- Modules -->
 <li class="nav-item pe-4">
-    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('modules.module_list') }}">
-        <i class="fa-solid fa-clipboard"></i> All modules
+    <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('modules.module_user_list') }}">
+        <i class="fa-solid fa-clipboard"></i> Modules
     </a>
-    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="All modules" href="{{ url_for('modules.module_list') }}">
+    <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="My modules" href="{{ url_for('modules.module_user_list') }}">
         <i class="fa-solid fa-clipboard"></i>
     </a>
 </li>
