--- a/main/templates/errors/404.html
+++ b/main/templates/errors/404.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-
-    <h1>Hello There</h1>
-
-    <h2>404, There's an error</h2>
+    <div class="text-center">
+        <span style="font-size: 17rem;">404</span>
+        <div>
+            <h3>There has been a 404 error</h3>
+        </div>
+    </div>
 
 {% endblock %}
