--- a/main/templates/includes/header/user_dropdown.html
+++ b/main/templates/includes/header/user_dropdown.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" href="{{ url_for('modules.module_question_add') }}">
                 <i class="fa-solid fa-question"></i>  Ask a Question
             </a>
         </li>
