--- a/main/templates/module/module_layout.html
+++ b/main/templates/module/module_layout.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 <!-- <div class="container"> -->
-    <div class="row text-center">
+    <div class="row pb-2">
         <div class="col-8">
             <h2>{{ module.code }} - {{ module.name }}</h2>
         </div>
         {#% set rating = 3 %#}
-        <div class="col-4">
+        <div class="col-4 text-end">
             {% set solid_star = "<i class='fa-solid fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
             {% set open_star = "<i class='fa-regular fa-star' style='color: rgb(146, 127, 17); font-size: 20px'></i>" %}
             
