--- a/main/templates/includes/aside.html
+++ b/main/templates/includes/aside.html
@@ -7,8 +7,8 @@
         <ul class="nav nav-pills flex-column mb-auto">
             <h5>Modules</h5>
             <div class="scrollarea" style="max-height: 25vh;">
-                {% if subscribed_modules %}
-                {% for module in subscribed_modules %}
+                {% if my_aside_dict %}
+                {% for module in my_aside_dict.subscribed_modules %}
                 <div class="mb-2">
                     {% set mod_name = module.module.code + ' - ' + module.module.name %}
                     <a href="{{ url_for('modules.module_single', module_id=module.module.id) }}">{{ mod_name|truncate(30, True) }}</a>
@@ -38,7 +38,7 @@
 
             <hr>
 
-            <h5>Posts</h5>
+            <h5>Questions</h5>
             <div class="scrollarea" style="max-height: 25vh;">
                 {% for i in range(20) %}
                 A recent post
