--- a/main/templates/includes/flash_msg.html
+++ b/main/templates/includes/flash_msg.html
@@ -4,8 +4,14 @@
     {% for message in messages %}
     <br>
 
-    <div class=flashes>
+    <!-- <div class=flashes>
+        
+    </div> -->
+
+    {# reference: https://getbootstrap.com/docs/5.2/components/alerts/ #}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
         {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endfor %}
     {% endif %}
